# pba-xcm-hk

chain-config/chain_config_excercises/: Cargo.toml
execution/: Cargo.toml
execution/src/: lib.rs
in-the-runtime/: Cargo.toml
in-the-runtime/src/: mock.rs
xcm-simulator-pba/: Cargo.toml
xcm-simulator-pba/src/: lib.rs  parachain.rs  relay_chain.rs
