[package]
name = "pallet-activity-runtime-xcm"
version = "1.0.0"
publish = false
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "derive"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }

sp-core = { default-features = false, version = "27.0.0" }
sp-runtime = { default-features = false, version = "30.0.1" }
sp-io = { default-features = false, version = "29.0.0" }

frame-benchmarking = { default-features = false, version = "27.0.0", optional = true }
frame-system = { default-features = false, version = "27.0.0" }
frame-support = { default-features = false, version = "27.0.0" }
pallet-balances = { default-features = false, version = "27.0.0" }

xcm = { package = "staging-xcm", default-features = false, version = "6.0.0" }
xcm-executor = { package = "staging-xcm-executor", default-features = false, version = "6.0.0" }
xcm-builder = { package = "staging-xcm-builder", default-features = false, version = "6.0.0" }
pallet-xcm = { default-features = false, version = "6.0.0" }

[dev-dependencies]
env_logger = "0.10.0"
test-log = "0.2.12"

[features]
default = ["std"]

std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-runtime/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
