[package]
name = "xcm-simulator-pba"
description = "Common xcm-simulator to use for hacking during PBA"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", default-features = false, version = "3.0.0" }
scale-info = { version = "2.1.2", features = ["derive"] }

frame-system = { default-features = false, version = "27.0.0" }
frame-support = { default-features = false, version = "27.0.0" }
pallet-balances = { default-features = false, version = "27.0.0" }
pallet-message-queue = { default-features = false, version = "30.0.0" }

sp-std = { default-features = false, version = "13.0.0" }
sp-core = { default-features = false, version = "27.0.0" }
sp-runtime = { default-features = false, version = "30.0.1" }
sp-io = { default-features = false, version = "29.0.0" }

xcm = { package = "staging-xcm", default-features = false, version = "6.0.0" }
xcm-simulator = { version = "6.0.0" }
xcm-executor = { package = "staging-xcm-executor", default-features = false, version = "6.0.0" }
xcm-builder = { package = "staging-xcm-builder", default-features = false, version = "6.0.0" }
pallet-xcm = { default-features = false, version = "6.0.0" }

polkadot-core-primitives = { default-features = false, version = "6.0.0" }
polkadot-runtime-parachains = { default-features = false, version = "6.0.0" }
polkadot-primitives = { default-features = false, version = "6.0.0" }
polkadot-parachain-primitives = { default-features = false, version = "5.0.0" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-system/std",
    "frame-support/std",
    "pallet-balances/std",
    "pallet-message-queue/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
    "xcm/std",
    "xcm-executor/std",
    "xcm-builder/std",
    "pallet-xcm/std",
    "polkadot-core-primitives/std",
    "polkadot-runtime-parachains/std",
    "polkadot-primitives/std",
    "polkadot-parachain-primitives/std",
]
