[package]
name = "xcm-chain-config-exercise"
description = "XCM Chain Config Tests"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", default-features = false, version = "3.0.0" }

frame-system = { default-features = false, version = "27.0.0" }
frame-support = { default-features = false, version = "27.0.0" }

pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }

xcm = { package = "staging-xcm", default-features = false, version = "6.0.0" }
xcm-simulator = { version = "6.0.0" }
xcm-simulator-pba = { path = "../../xcm-simulator-pba" }
xcm-builder = { package = "staging-xcm-builder", default-features = false, version = "6.0.0" }
pallet-xcm = { default-features = false, version = "6.0.0" }
